fix: adjust spacing on FAQ lists

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -154,7 +154,7 @@
 		}
 
 		ul {
-			margin-top: -1.4rem;
+			margin-top: 0;
 		}
 	}
 }
